--- a/src/main.tex
+++ b/src/main.tex
@@ -63,11 +63,11 @@
   \emaketitle    % 表紙（英語）
 \fi
 
-\include{00_abstract}  % アブストラクト。要独自コマンド、include先参照のこと
+\include{00_abstract}
 
 \tableofcontents  % 目次
 \listoffigures    % 表目次
-\listoftables    % 図目次
+\listoftables     % 図目次
 
 \pagenumbering{arabic}
 
@@ -79,7 +79,7 @@
 
 
 \include{90_acknowledgment}  % 謝辞。要独自コマンド、include先参照のこと
-\include{91_bibliography}  % 参考文献。要独自コマンド、include先参照のこと
+\include{91_bibliography}    % 参考文献。要独自コマンド、include先参照のこと
 \appendix
 \include{92_appendix}    % 付録
 
